--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -277,9 +277,36 @@ touch todo/templates/todo/todo_confirm_delete.html
 {%endblock%}
 ```
 
+# ToDoアプリの動作確認
+```
+docker compose build
+docker compose up
+```
+で[localhost:8000](https://localhost:8000)にアクセスをして以下の画像の様に表示されていたらOKです。<br>
+ここでは、データベースはコンテナ上のpostgresを使用しています。
 
+![todo-app]()
+
+サーバ停止： ctrl + c
+```
+docker compose down
+```
 
 # Githubにプッシュしてデプロイされたことを確認する
-Github actionsからTodoアプリがAzureに自動デプロイされたことを確認してください。  
+CI/CDを構築しているので、mainブランチに　pushをすると自動でデプロイされます。<br>
+Github ActionsからTodoアプリがAzureに自動デプロイされたことを確認してください。  
 ![githubactions](img/githubactions.png)
+デプロイが完了してもデータベースが無いので、アプリは動作しません。
+
+## データベースの作成
+[https://portl.azure.com](https://portl.azure.com)を開いて「postgres」と検索をします。<br>
+「Azure Database for PostgreSQL」を選択し、「作成」をします。<br>
+* 単一サーバ　　→ いいえ、単一サーバーの作成
+* リソースグループ：　todoapp (先ほどと同じもの)
+* サーバー名：　任意の名前
+* データソース: なし
+* 場所: Japan East
+* バージョン
+
+
 また実際にWebサイトにアクセスしてTodoアプリがしっかりと機能しているか確認してみてください。
