--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -298,7 +298,7 @@ Github ActionsからTodoアプリがAzureに自動デプロイされたことを
 ![githubactions](img/githubactions.png)
 デプロイが完了してもデータベースが無いので、アプリは動作しません。
 
-## データベースの作成
+# データベースの作成
 [https://portl.azure.com](https://portl.azure.com)を開いて「postgres」と検索をします。<br>
 「Azure Database for PostgreSQL」を選択し、「作成」をします。<br>
 * 単一サーバ　　→ いいえ、単一サーバーの作成
@@ -306,7 +306,12 @@ Github ActionsからTodoアプリがAzureに自動デプロイされたことを
 * サーバー名：　任意の名前
 * データソース: なし
 * 場所: Japan East
-* バージョン
-
+* バージョン: 11
+* コンピューティングとストレージ　 → 「サーバの構成」で以下に変更
+    * 汎用目的　→ BASIC
+    * 2仮装コア → 1vCore
+    * ストレージ： 5GB
+    * バックアップの保有期間: 7日
+デプロイが完了したら、
 
 また実際にWebサイトにアクセスしてTodoアプリがしっかりと機能しているか確認してみてください。
