--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -312,6 +312,16 @@ Github ActionsからTodoアプリがAzureに自動デプロイされたことを
     * 2仮装コア → 1vCore
     * ストレージ： 5GB
     * バックアップの保有期間: 7日
-デプロイが完了したら、
 
+デプロイが完了したら、リソースに移動します。
+
+### 環境変数の設定
+作成したデータベースに接続するために、App Serviceの「構成」→「新しいアプリケーションの設定」から環境変数を設定する必要があります。
+* DB_HOST : 「PostgreSQL概要の**サーバー名**」
+* DB_USER : 「PostgreSQL概要の**管理者ユーザー名**」 user@db名 の全部必要です。
+* DB_NAME : postgres
+* DB_PORT : 5432
+* DB_PASSWORD: 「**設定したもの**」
+
+これらを設定した後、設定を保存してください。<br>
 また実際にWebサイトにアクセスしてTodoアプリがしっかりと機能しているか確認してみてください。
