--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -186,7 +186,10 @@ docker push レジストリ名.azurecr.io/hello-world-2
 
 ## 次へ
 次はCI/CIです。<br>
-[CI/CDの資料](cicd.md)
+[CI/CDの資料](cicd.md)   
+
+
+[READMEに戻る](../README.md)
 
 
 
