--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -325,3 +325,9 @@ Github ActionsからTodoアプリがAzureに自動デプロイされたことを
 
 これらを設定した後、設定を保存してください。<br>
 また実際にWebサイトにアクセスしてTodoアプリがしっかりと機能しているか確認してみてください。
+
+# ToDoアプリの完成
+以上でToDoアプリの完成です。<br>
+終わった人は、分からなかった所をもう一度確認してみたり、　実際に運用するための設定を行なってみたりしましょう。
+
+[READMEに戻る](../README.md)
