--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -285,7 +285,7 @@ docker compose up
 で[localhost:8000](https://localhost:8000)にアクセスをして以下の画像の様に表示されていたらOKです。<br>
 ここでは、データベースはコンテナ上のpostgresを使用しています。
 
-![todo-app]()
+![todo-app](img/todo-app.png)
 
 サーバ停止： ctrl + c
 ```
