--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -96,6 +96,8 @@ ENTRYPOINT ["./startup.sh"]
 docker compose build 
 docker compose up
 ```
+![django-rocket](img/django-rocket.png)
+
 
 サーバ停止： control + c
 ```
