--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -125,7 +125,7 @@ urlpatterns = [
 ```
 touch todo/urls.py
 ```
-![app-make-urls]()
+![app-make-urls](img/app-make-urls.png)
 ## ルーティングの設定３
 サーバに、https://サーバドメイン/hello のアクセスが来たら
 
@@ -163,6 +163,7 @@ docker compose up
 ```
 を実行し、[localhost:8000/hello](http://localhost:8000/hello)にアクセス。<br>
 「Hello World」と表示できたら成功です。<br><br>
+![django-hello](django-hello.png)
 サーバ停止：ctrl + c
 ```
 docker compose down
