--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -163,7 +163,7 @@ docker compose up
 ```
 を実行し、[localhost:8000/hello](http://localhost:8000/hello)にアクセス。<br>
 「Hello World」と表示できたら成功です。<br><br>
-![django-hello](django-hello.png)
+![django-hello](img/django-hello.png)
 
 サーバ停止：ctrl + c
 ```
