--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -1,4 +1,4 @@
-[READMEに戻る](../README.md)
+[READMEに戻る](https://github.com/alterbooth/hol-todo-app-on-azure)
 # 環境構築
 ## GithubでこのリポジトリをForkする
 右上↗️の「Fork」を押します。<br>
@@ -110,7 +110,7 @@ docker compose down
 次はデプロイです。<br>
 [デプロイの資料](デプロイ.md)
 
-[READMEに戻る](../README.md)
+[READMEに戻る](https://github.com/alterbooth/hol-todo-app-on-azure)
 
 
 
