--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -191,7 +191,7 @@ docker push レジストリ名.azurecr.io/hello-world-2
 [CI/CDの資料](cicd.md)   
 
 
-[READMEに戻る](../README.md)
+[READMEに戻る](https://github.com/alterbooth/hol-todo-app-on-azure)
 
 
 
