--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -330,4 +330,4 @@ Github ActionsからTodoアプリがAzureに自動デプロイされたことを
 以上でToDoアプリの完成です。<br>
 終わった人は、分からなかった所をもう一度確認してみたり、　実際に運用するための設定を行なってみたりしましょう。
 
-[READMEに戻る](../README.md)
+[READMEに戻る](https://github.com/alterbooth/hol-todo-app-on-azure)
