--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -314,6 +314,8 @@ Github ActionsからTodoアプリがAzureに自動デプロイされたことを
     * バックアップの保有期間: 7日
 
 デプロイが完了したら、リソースに移動します。
+設定の接続のセキュリティの「Azureサービスへのアクセスを許可」を「はい」にしてください。
+
 
 ### 環境変数の設定
 作成したデータベースに接続するために、App Serviceの「構成」→「新しいアプリケーションの設定」から環境変数を設定する必要があります。
