--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -313,11 +313,16 @@ Github ActionsからTodoアプリがAzureに自動デプロイされたことを
     * ストレージ： 5GB
     * バックアップの保有期間: 7日
 
-デプロイが完了したら、リソースに移動します。
-設定の接続のセキュリティの「Azureサービスへのアクセスを許可」を「はい」にしてください。
+デプロイが完了したら、リソースに移動します。<br>
+リソースに移動したら、データベースに接続できるように以下の設定を行います。
+* 設定の接続のセキュリティに移動します
+* 「Azureサービスへのアクセスを許可」を「はい」にしてください。
+* 「SSL 接続を強制する」を「無効」にしてください。(本来は有効にすることが望ましいですが、今回は説明の都合で省きます。)
+* 保存を忘れないでください。
 
 
-### 環境変数の設定
+
+### 環境変数の設定(Azure App Service)
 作成したデータベースに接続するために、App Serviceの「構成」→「新しいアプリケーションの設定」から環境変数を設定する必要があります。
 * DB_HOST : 「PostgreSQL概要の**サーバー名**」
 * DB_USER : 「PostgreSQL概要の**管理者ユーザー名**」 user@db名 の全部必要です。
