--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -159,6 +159,7 @@ def index(request):
 変更を確認してみましょう。
 
 ```
+docker compose build
 docker compose up
 ```
 を実行し、[localhost:8000/hello](http://localhost:8000/hello)にアクセス。<br>
