--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -22,10 +22,14 @@
 
 ## ACRのクイックスタート(ローカルで作業)
 ### ビルドしてイメージを作成
+↓ WindowsとMac(Intel)の人
 ```
 docker build -t hello-world . 
 ```
-
+↓Mac(M1)の人
+```
+docker build —platform linux/amd64 -t hello-world . 
+```
 
 ### AECログイン&イメージのプッシュ
 作成したコンテナレジストリの **クイックスタート** のページを開きます。<br>クイックスタートのコマンドは自分のコンテナレジストリの名前になっているので、 **コピー&ペーストで簡単に実行できます** 。<br>(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
