環境変数をdocker-composeから.envへの記述に変更

--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -46,14 +46,30 @@ docker compose run web django-admin.py startapp todo
 ```
 ----
 ## 環境変数の設定
-SECRET_KEYは公開してはいけないので環境変数を使います。
+SECRET_KEYは公開してはいけないので環境変数を使います。  
+
+まず、「.env」ファイルを作成します。
+```
+touch .env
+```
+次に以下の文字を「.env」に記述します。
+
+↓.env
+```
+SECRET_KEY= 
+DB_USER=postgres
+DB_NAME=postgres
+DB_PASSWORD=postgres
+DB_HOST=db
+DB_PORT=5432
+POSTGRES_PASSWORD=postgres
+```
 
 **settings.py** の SECRET_KEY を **docker-compose.yml** の SECRET_KEY に記述します。
 
-↓docker-compose.yml のSECRET_KEYを設定
+↓.env のSECRET_KEYを設定
 ```
-environment:
-      - SECRET_KEY= ここにsettings.pyに書いてあるSECRET_KEYを記述
+SECRET_KEY= ここにsettings.pyに書いてあるSECRET_KEYを記述
 ```
 
 ↓settings.py に以下を追加
