--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -78,6 +78,16 @@ env.read_env(os.path.join('.env'))
 SECRET_KEY = env('SECRET_KEY')
 ```
 
+### 確認
+↓docker-compose.ymlのコードを確認
+```
+cat docker-compose.yml
+```
+↓docker-compose.ymlに環境変数を代入後のコードを確認
+```
+docker-compose config 
+```
+
 ----
 
 ## プロジェクトの設定を変更
