Update 環境構築.md #8

--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -44,6 +44,12 @@ docker compose run web django-admin.py startproject todoproject .
 ```
 docker compose run web django-admin.py startapp todo
 ```
+> **※Windowsで本手順を実施する際の注意**  
+```standard_init_linux.go:211: exec user process caused "no such file or directory"```  
+というエラーが出る場合があります。  
+その場合、以下のコマンドを実行し改行コードをCRLFからLFに変更すれば解決する事ができます。  
+`git config --global core.autocrlf input`
+
 ----
 ## 環境変数の設定
 SECRET_KEYは公開してはいけないので環境変数を使います。  
