Update 環境構築.md close #8

--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -46,9 +46,9 @@ docker compose run web django-admin.py startapp todo
 ```
 > **※Windowsで本手順を実施する際の注意**  
 ```standard_init_linux.go:211: exec user process caused "no such file or directory"```  
-というエラーが出る場合があります。  
+というエラーが出る場合があります。 [詳細はこちら](https://qiita.com/kabik/items/5591f62c0ef6ddef5db2)  
 その場合、以下のコマンドを実行し改行コードをCRLFからLFに変更すれば解決する事ができます。  
-`git config --global core.autocrlf input`
+`git config --global core.autocrlf input`  
 
 ----
 ## 環境変数の設定
